<resources>
    <string name="app_name">MomsCare</string>
    <string name="btnBMICal">BMI Calculator</string>
    <string name="btnWeightCon">Weight Convertor</string>
    <string name="btnMacroCal">Calories Calculator</string>
    <string name="btnDuedate">Due Date Calculator</string>

    <!-- side nav bar -->
    <string name="Open">OPEN</string>
    <string name="Close">CLOSE</string>
    <string name="SignUptxtName">User Name</string>
    <string name="SignUptxtEmail">Email</string>
    <string name="SignUptxtPassword">Password</string>
    <string name="SignUptxtGender">Gender</string>
    <string name="SignUptxtHeight">Height</string>
    <string name="SignUptxtWeight">Weight</string>
    <string name="SignUptxtAge">Age</string>
    <string name="SignUpNamee" />
    <string name="SignUpEmail" />
    <string name="SignUpPassword" />
    <string name="SignUpGender" />
    <string name="SignUpbtnSignUp">SIGN UP</string>
    <string name="SignUpbtnSignIn">SIGN IN</string>
    <string name="SignUp">Sign Up</string>
    <string name="BMIResult">Result</string>
    <string name="txtHealthyBMI">Healthy BMI</string>
    <string name="txtHealthyWeight">Healthy Weight</string>
    <string name="txtResultHbmi" />
    <string name="txtResultHweight" />
    <string name="ResultBMI">BMI</string>
    <string name="UPtxt">User Profile</string>
    <string name="UPbtnUpdate">Update</string>
    <string name="UPtxtDelete">Delete </string>
    <string name="todotxt">To Do List</string>
    <string name="SignInuser_name">User Name</string>
    <string name="SignInPassword">Password</string>
    <string name="SignInpassword">Password</string>
    <string name="SignInbtnSignIn">SIGN IN</string>
    <string name="SignIntxtNewUser">Are you new to MomsCare?</string>
    <string name="SignInNewUserSignUp">Sign Up</string>
    <string name="SignIntxtForgotpass">Forgot your password?</string>
    <string name="SignInpasswordReset">Reset</string>
    <string name="txtList_name">To Do List</string>
    <string name="SignIn">SIGN IN</string>
    <string name="button">BMI</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="button_mealSearch">Find</string>
    <string name="navBarProfile" textSize="18sp">Profile</string>
    <string name="SignUpName">name</string>
    <string name="ResultBMII">Here\'Your BMI</string>
    <string name="getfit">Get Start</string>


    <string name="btnAddExercise">ADD EXERCISE</string>
    <string name="btnDeleteExercise">DELETE EXERCISE</string>
    <string name="btnWeightConverter">WEIGHT CONVERTER</string>
    <string name="btnUpdateExercise">UPDATE EXERCISE</string>
    <string name="WorkOutId">WorkOut Id</string>
    <string name="WorkOutName">WorkOut Name</string>
    <string name="WorkOutPackageType">Package Type</string>
    <string name="WorkOutCalorieBurnt">Calorie Burnt</string>
    <string name="WorkOutDuration">Duration</string>
    <string name="WorkOutsteps">Steps</string>
    <string name="WorkOutminutes">min</string>
    <string name="WorkOutAddExercise">ADD EXERCISE</string>
    <string name="WorkOutAddBtn">ADD</string>
    <string name="startButton">START</string>
    <string name="StopButton">STOP</string>
    <string name="TimeDownCounter">TIME DOWN COUNTER</string>
    <string name="kgToPounds">Kilograms to Pounds</string>
    <string name="PoundsToKg">Pounds To Kilograms</string>
    <string name="kgToStones">Kilograms To Stones</string>
    <string name="weightConvertBtn">Convert</string>
    <string name="weightConverter">WEIGHT CONVERTER</string>
    <string name="ModifyExercise">MODIFY EXERCISE</string>
    <string name="Workoutdeletebtn">DELETE</string>
    <string name="WorkOutupdatebtn">UPDATE</string>
    <string name="WorkOutShowbtn">RESET</string>
    <string-array name="Spinner_Item">
        <item>Postpartum</item>
        <item>Prenatal</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fatLoss">FAT-LOSS</string>
    <string name="muscleGain">MUSCLE-GAIN</string>
    <string name="ViewExeHint1">Enter No of Repeats</string>
    <string name="calorieBurnOutBtn">CALORIES BURN OUT</string>
    <string name="WorkOutTimePeriod">Time Period(min)</string>
    <string name="WorkOutStart">START</string>
    <string name="MuscleGainBtn">POSTPARTUM WORKOUT</string>
    <string name="FatLossBtn">PRENATAL WORKOUT</string>
    <string name="WOpackages">WORK-OUT PACKAGES</string>
    <string name="woAllWorkOuts">List of Workouts</string>
    <string name="moveToWCBtn">Weight Converter</string>
    <string name="WorkOutAddImgBtn">Upload Img</string>
    <string name="ImageUploadTv">Upload an Image</string>
    <string name="wo_ImgUploadDltBtn">DELETE IMAGE</string>
    <string name="wo_ImgUploadSaveBtn">SAVE IMAGE</string>
    <string name="WorkOutGetImagebtn">Image</string>
    <string name="woShowImage">WorkOut Image</string>
    <string name="ViewExeImgUpdateBtn">CHANGE IMAGE</string>
    <string name="txt3">WORK OUTS DASHBORD</string>
    <string name="pernatal_frgmnt_tv1">Prenatal Body Coaching</string>


 

 

    <!-- -->


  <!-- Medical: Remove or change this placeholder text -->


 
 
    <string name="nutrition_navigation">Navigation Menu</string>
    <string name="btnAddMeal">Add a Meal Plan</string>
    <string name="btnMacros">Macros</string>
    <string name="btnViewMeal">View Meal Plans</string>
    <string name="btnAdd">ADD</string>
    <string name="txtMacroFoodName">Name of the food</string>
    <string name="txtMacroName" />
    <string name="txtViewServing" />
    <string name="txtServingSize">Serving Size</string>
    <string name="btnFindMacro">Find Macros</string>
    <string name="txtEnergy">Energy</string>
    <string name="txtViewEnergy" />
    <string name="txtFat">Fat</string>
    <string name="txtViewFat" />
    <string name="txtCarbs">Carbohydrates</string>
    <string name="txtViewCarbs" />
    <string name="txtFiber">Fiber</string>
    <string name="txtViewFiber" />
    <string name="txtProtein">Protein</string>
    <string name="txtViewProtein" />
    <string name="txtSodium">Sodium</string>
    <string name="txtViewSodium" />
    <string name="txtCholesterol">Cholesterol</string>
    <string name="txtViewCholesterol" />
    <string name="txtPotasium">Potasium</string>
    <string name="txtViewPotasium" />
    <string name="btnUpdate">Update</string>
    <string name="btnAddMacros">Add</string>
    <string name="txtViewFoodID">Food ID</string>
    <string name="txtViewFoodName">Food Name</string>
    <string name="txtInFoodId" />
    <string name="txtInFoodName" />
    <string name="macro_cal">Macro Calculator</string>
    <string name="macro_add_navigation">Add Macro Record</string>
    <string name="add_meal">Add a Meal</string>
    <string name="update_meal_navigation">Update Meal Plan</string>
    <string name="view_meals_navigation">Meal Plans</string>
    <string name="macros_navigation">Added Macros</string>


    <string name="textView31">Calories</string>
    <string name="textView6">Calories</string>

    <string name="um_bm02">Meal Name</string>
    <string name="um_lm01">Meal Name</string>
 

 
    <string name="SignUpHeight">cm</string>



    <!-- Medical: Remove or change this placeholder text -->

    <string name="txt8">Medical Shchedule </string>
    <string name="btn2">Add New Schedule</string>
    <string name="txt9">Name :</string>
    <string name="txt10">Clinic Day</string>
    <string name="txt11">Date :</string>
    <string name="date1">08-22-2021</string>
    <string name="txt12">Status :</string>
    <string name="btn3">Done</string>
    <string name="txt13">Time :</string>
    <string name="time1">10.30 AM</string>
    <string name="btn4">UPDATE</string>
    <string name="txt14">Name :</string>
    <string name="txt15">Date :</string>
    <string name="txt16">Time :</string>
    <string name="txt17">Status :</string>
    <string name="txt18">Doctor Channeling</string>
    <string name="txt19">09-12-2021</string>
    <string name="txt20">4.00 PM</string>
    <string name="btn5">Done</string>
    <string name="btn6">update</string>
    <string name="txt21">Due Date Calculator</string>
    <string name="txt22">Congratulations!</string>
    <string name="txt23">Your Due Date Is :</string>
    <string name="txt24" />
    <string name="txt25">Add New Schedule</string>
    <string name="txt26">Your Schedule</string>
    <string name="txt27">Schedule Name :</string>
    <string name="txt28">Schedule Date :</string>
    <string name="txt29">Schedule Time :</string>
    <string name="txt30" />
    <string name="txt31" />
    <string name="txt32" />
    <string name="btn7">Add Schedule</string>
    <string name="txt33">Update Schedule</string>
    <string name="txt34">Schedule Name :</string>
    <string name="txt35">Schedule Date :</string>
    <string name="txt36">Schedule Time :</string>
    <string name="txt37">Clinic Day</string>
    <string name="txt38">08-22-2021</string>
    <string name="txt39">10.30 AM</string>
    <string name="txt40">Schedule Name :</string>
    <string name="txt41">Schedule Date :</string>
    <string name="txt42">Schedule Time :</string>
    <string name="btn8">UPDATE</string>
    <string name="txt43" />
    <string name="txt44" />
    <string name="txt45" />
    <string name="txt46">Due Date Calculator</string>
    <string name="txt47">Calculation Method :</string>
    <string name="txt48">Last Period</string>
    <string name="txt49"> Month Of Your Last Period :</string>
    <string name="txt50" />
    <string name="btn9">Calculate</string>
    <string name="txt51">Calculate Your Due Date</string>
    <string name="btn10">Add Commom Problems</string>
    <string name="btn11">View And Update Problems</string>
    <string name="txt52">Doctor Dashboard</string>
    <string name="btn12">Add Your Register No:  And E-Mail</string>
    <string name="btn13">Remove My Account</string>
    <string name="txt53">View Doctors</string>
    <string name="txt54">Doctor Name :</string>
    <string name="txt55">Register No :</string>
    <string name="txt56">Mobile :</string>
    <string name="txt57">Doctor Name :</string>
    <string name="txt58">Register No :</string>
    <string name="txt59">Mobile :</string>
    <string name="txt60">Doctor Name :</string>
    <string name="txt62">Register No :</string>
    <string name="txt63">Mobile :</string>
    <string name="txt64">Medical Information</string>
    <string name="btn14">Know Your Due Date</string>
    <string name="btn15">Common Problems</string>
    <string name="btn16">Medical Schedule</string>
    <string name="btn17">View Doctors</string>
    <string name="txt00" />
    <string name="txt002">Month(Number only):</string>
    <string name="txt001">Year :</string>
    <string name="txt003">Last Period</string>
    <string name="txt004" />
    <string name="medtext">Medical Schedule</string>
    <string name="btndelete">DELETE</string>


 
 

</resources>