<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Medical.Medical_shchedule">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bac4" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="413dp"
        android:layout_height="56dp"
        android:background="#CF6F90"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />



    <ImageView
        android:id="@+id/img1"
        android:layout_width="43dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:srcCompat="@drawable/list" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="43dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="@+id/toolbar4"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toEndOf="@+id/img1"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.388"
        app:srcCompat="@drawable/search" />

    <ImageView
        android:id="@+id/img3"
        android:layout_width="43dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="@+id/toolbar4"
        app:layout_constraintStart_toEndOf="@+id/img2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/txt8"
        android:layout_width="229dp"
        android:layout_height="40dp"
        android:text="@string/txt8"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toStartOf="@+id/img2"
        app:layout_constraintStart_toEndOf="@+id/img1"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


    <Button
        android:id="@+id/btn2"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:onClick="openAdd"
        android:text="@string/btn2"
        app:backgroundTint="#B484BC"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt8"
        app:layout_constraintVertical_bias="0.47" />


    <TextView
        android:id="@+id/txt9"
        android:layout_width="97dp"
        android:layout_height="42dp"
        android:text="@string/txt9"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txt11"
        app:layout_constraintEnd_toEndOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />

    <EditText
        android:id="@+id/txt10"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt10"
        app:layout_constraintBottom_toTopOf="@+id/date1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />

    <TextView
        android:id="@+id/txt11"
        android:layout_width="97dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/txt11"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txt13"
        app:layout_constraintEnd_toStartOf="@+id/date1"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt10"
        app:layout_constraintVertical_bias="0.586" />

    <EditText
        android:id="@+id/date1"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/date1"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.378" />

    <TextView
        android:id="@+id/txt12"
        android:layout_width="97dp"
        android:layout_height="42dp"
        android:layout_marginBottom="4dp"
        android:text="@string/txt12"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/time1"
        app:layout_constraintVertical_bias="0.948" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn3"
        app:backgroundTint="#D37293"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toEndOf="@+id/txt12"
        app:layout_constraintTop_toBottomOf="@+id/time1"
        app:layout_constraintVertical_bias="0.636" />

    <View
        android:id="@+id/view"
        android:layout_width="413dp"
        android:layout_height="3dp"
        android:background="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <View
        android:id="@+id/view4"
        android:layout_width="413dp"
        android:layout_height="3dp"
        android:background="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt13"
        android:layout_width="97dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/txt13"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txt12"
        app:layout_constraintEnd_toStartOf="@+id/date1"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img1"
        app:layout_constraintVertical_bias="0.943" />

    <EditText
        android:id="@+id/time1"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/time1"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date1"
        app:layout_constraintVertical_bias="0.22" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn4"
        app:backgroundTint="#B484BC"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/time1"
        app:layout_constraintVertical_bias="0.842" />

    <TextView
        android:id="@+id/txt14"
        android:layout_width="97dp"
        android:layout_height="42dp"
        android:text="@string/txt14"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt12"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/txt15"
        android:layout_width="97dp"
        android:layout_height="42dp"
        android:text="@string/txt15"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt14"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/txt16"
        android:layout_width="97dp"
        android:layout_height="42dp"
        android:text="@string/txt16"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt15"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/txt17"
        android:layout_width="97dp"
        android:layout_height="42dp"
        android:text="@string/txt17"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt16"
        app:layout_constraintVertical_bias="0.193" />

    <EditText
        android:id="@+id/txt18"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/txt14"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.549" />

    <EditText
        android:id="@+id/txt19"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt19"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toEndOf="@+id/txt15"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.632"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txt20"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toEndOf="@+id/txt16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn5"
        app:backgroundTint="#D37293"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toEndOf="@+id/txt17"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn6"
        app:backgroundTint="#B484BC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="417dp"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/navigate_todo"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:backgroundTint="#E91E63"
            android:drawableTop="@drawable/ic_baseline_format_list_numbered_24"
            app:cornerRadius="0dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/navigate_workout"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:height="1dp"
            android:backgroundTint="@color/ccc"
            android:drawableTop="@drawable/ic_baseline_fitness_center_24"
            app:cornerRadius="0dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/navigate_nutrition"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#E91E63"
            android:drawableTop="@drawable/ic_baseline_fastfood_24"
            app:cornerRadius="0dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/navigate_supplement"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:backgroundTint="#E91E63"
            android:drawableTop="@drawable/ic_baseline_add_circle_24"
            android:textSize="14sp"
            app:cornerRadius="0dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>