<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Medical.Duedate_cal">

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="457dp"
        android:layout_height="746dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bac4" />


    <TextView
        android:id="@+id/txt47"
        android:layout_width="293dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/txt47"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView33"
        app:layout_constraintVertical_bias="0.173" />

    <TextView
        android:id="@+id/txt49"
        android:layout_width="293dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/txt49"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

    <EditText
        android:id="@+id/txt50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/txt50"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt001"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="352dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView33"
        app:layout_constraintTop_toTopOf="@+id/imageView33"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/calendar" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="142dp"
        android:layout_height="59dp"
        android:background="@drawable/buttons"
        android:onClick="calculate"
        android:text="@string/btn9"
        app:backgroundTint="#B484BC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />

    <TextView
        android:id="@+id/txt51"
        android:layout_width="366dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="@string/txt51"
        android:textColor="#460351"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView33"
        app:layout_constraintVertical_bias="0.086" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="417dp"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/navigate_todo"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:backgroundTint="#E91E63"
            android:drawableTop="@drawable/ic_baseline_format_list_numbered_24"
            app:cornerRadius="0dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/navigate_workout"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:height="1dp"
            android:backgroundTint="@color/ccc"
            android:drawableTop="@drawable/ic_baseline_fitness_center_24"
            app:cornerRadius="0dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/navigate_nutrition"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#E91E63"
            android:drawableTop="@drawable/ic_baseline_fastfood_24"
            app:cornerRadius="0dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/navigate_supplement"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:backgroundTint="#F669BF"
            android:drawableTop="@drawable/ic_baseline_add_circle_24"
            android:textSize="14sp"
            app:cornerRadius="0dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt001"
        android:layout_width="89dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="88dp"
        android:textSize="24sp"
        android:text="@string/txt001"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt49" />

    <EditText
        android:id="@+id/txt00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/txt00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt50"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txt002"
        android:layout_width="159dp"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:text="@string/txt002"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt00"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt003"
        android:layout_width="172dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="104dp"
        android:text="@string/txt003"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt47" />
</androidx.constraintlayout.widget.ConstraintLayout>